k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uli-system
  labels:
    app.kubernetes.io/name:    uli
    app.kubernetes.io/part-of: uli-system
